--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,12 @@ xmlns:android="http://schemas.android.com/apk/res/android">
         android:theme="@style/AppTheme.Translucent">
     </activity>
 
+    <activity
+        android:name="com.dre.loyalty.features.splash.presentation.SplashScreenActivity"
+        android:theme="@style/AppTheme.Translucent"
+        android:label="@string/login_screen_title">
+    </activity>
+
 </application>
 
 </manifest>
