--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:tools="http://schemas.android.com/tools"
-    package="com.fernandocejas.sample"
+    package="com.dre.loyalty"
 xmlns:android="http://schemas.android.com/apk/res/android">
 
 <!--Permissions-->
