--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,11 @@ xmlns:android="http://schemas.android.com/apk/res/android">
     </activity>
 
     <activity
+        android:name=".features.register.presentation.RegisterActivity"
+        android:label="@string/register_screen_title">
+    </activity>
+
+    <activity
         android:name="com.dre.loyalty.features.movies.MoviesActivity"
         android:label="@string/movies_screen_title">
     </activity>
