--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,10 @@ xmlns:android="http://schemas.android.com/apk/res/android">
         android:name=".features.authenticationselector.presentation.AuthenticationSelectorActivity">
     </activity>
 
+  <activity
+      android:name=".features.otp.OtpActivity">
+  </activity>
+
 </application>
 
 </manifest>
